  approximation rather than a combination of error rate and binomial
  mid-p value.
+ Added '-q (minimum quality score)' parameter to allow exclusion of low quality
  bases from scoring in align subcommand.
+ Added reference subcommand which uses V-region germline alignments from
  ublast to assemble paired-ends.
+ Internal changes to multiprocessing structure.

-------------------------------------------------------------------------------
June 10, 2014
Version 0.4.4

SplitSeq:
+ Removed a *nix-specific dependency, allowing SplitSeq to work on Windows.

-------------------------------------------------------------------------------
April 7, 2014
Version 0.4.3

CollapseSeq:
+ Fixed bug that occurs with Python 2.7.5 on OS X.

SplitSeq:
+ Fixed bug in samplepairs subcommand that occurs with Python 2.7.5 on OS X.

-------------------------------------------------------------------------------
March 20, 2014
Version 0.4.2

Increased verbosity of exception reporting.

IgCore:
+ Updates to consensus functions to support changes to BuildConsensus.

AssemblePairs:
+ Set default alpha to 0.01.

BuildConsensus:
+ Added support for '--freq (value)' parameter to quality consensus method
  and set default value to 0.6.
+ Fixed a bug in the frequency consensus method where missing values were
  contributing to the total character count at each position.
+ Added the parameter '--maxmiss (value)' which provides a cut-off for removal 
  of positions with too many N or gap characters .

MaskPrimers:
+ Renamed the '--reverse' parameter to '--revpr'.

SplitSeq:
+ Removed convert subcommand.

-------------------------------------------------------------------------------
January 27, 2014
Version 0.4.1

Changes to the internals of multiple tools to provide support for 
  multiprocessing in Windows environments.
Changes to the internals of multiple tools to provide clean exit of
  child processes upon kill signal or exception in sibling process. 